ZY_Foundation_Yingzhi/Kubernetes/admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  namespace: zhangyuan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
      - name: admin
        image: zhangyuan-admin:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "64m"
            memory: "64Mi"
          limits:
            cpu: "256m"
            memory: "128Mi"
